[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/Player/SkinFox.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Libraries/StateMachine/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://src/Player/States/Move/Idle.gd" type="Script" id=3]
[ext_resource path="res://src/Player/States/Move.gd" type="Script" id=4]
[ext_resource path="res://src/Player/States/Move/Air.gd" type="Script" id=5]
[ext_resource path="res://src/Player/States/Move/Run.gd" type="Script" id=6]
[ext_resource path="res://src/Player/Player.gd" type="Script" id=7]
[ext_resource path="res://src/Player/Camera/CameraRig.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Player/States/Spawn.gd" type="Script" id=9]
[ext_resource path="res://src/Player/States/Die.gd" type="Script" id=10]
[ext_resource path="res://src/Player/SkinSquirrel.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/Actor/Stats.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/Player/SkinRabbit.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/Player/NpcInteraction.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/Combat/Hitbox.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/Player/SaveProgressInteraction.tscn" type="PackedScene" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[sub_resource type="RayShape2D" id=11]
length = 10.0

[node name="Player" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -20 )
shape = SubResource( 1 )

[node name="CameraRig" parent="." instance=ExtResource( 8 )]

[node name="SkinRabbit" parent="." instance=ExtResource( 13 )]
visible = false
position = Vector2( 0, -18 )

[node name="SkinSquirrel" parent="." instance=ExtResource( 11 )]
visible = false
position = Vector2( 1, -19 )

[node name="SkinFox" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -16 )

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 2 )
initial_state = NodePath("Spawn")

[node name="Spawn" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Idle" type="Node" parent="StateMachine/Move"]
script = ExtResource( 3 )

[node name="JumpInputBuffering" type="Timer" parent="StateMachine/Move/Idle"]
wait_time = 0.15
one_shot = true

[node name="Run" type="Node" parent="StateMachine/Move"]
script = ExtResource( 6 )

[node name="Air" type="Node" parent="StateMachine/Move"]
script = ExtResource( 5 )
max_jump_count = 0

[node name="CoyoteTime" type="Timer" parent="StateMachine/Move/Air"]
wait_time = 0.15
one_shot = true

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Hitbox" parent="." instance=ExtResource( 15 )]
position = Vector2( 0, -20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="Stats" parent="." instance=ExtResource( 12 )]

[node name="NpcInteraction" parent="." instance=ExtResource( 14 )]
position = Vector2( 0, -20 )

[node name="SaveProgressInteraction" parent="." instance=ExtResource( 18 )]
position = Vector2( 0, -20 )

[node name="PassThrough" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PassThrough"]
rotation = 3.14159
shape = SubResource( 11 )
one_way_collision = true
